# Rustentials

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: docs.md
scripts/: run_tests.sh
src/: core.rs  lib.rs  main.rs  ui.rs
src/cli/: cli.rs
src/core/: authentification.rs
src/models/: credential.rs  user.rs
src/repository/: db.rs  services.rs
src/repository/queries/: delete_credential.rs  get_all_credential_labels.rs  get_credentials.rs  get_user_password_hash.rs  insert_credentials.rs  insert_user_data.rs  schema.rs
src/ui/: app.rs  cli.rs  commands.rs
src/ui/commands/: delete_credential.rs  fetch_all_labels.rs  fetch_credentials.rs  insert_credentials.rs  login.rs  register.rs
src/ui/lang/: langs.rs
tests/: tests.rs  unit_tests.rs
