[package]
name = "Rustentials"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
async-std = { version = "1.13.0", features = ["attributes"]}
clap = { version = "4.5.26", features = ["derive"] }
password-hash = "0.5.0"
rand = "0.8.5"
rand_core = "0.6.4"
regex = "1.11.1"
rpassword = "7.3.1"
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls","sqlite"]}


